creusot/tests/should_fail/cycle.stderr
warning: unused import: `creusot_contracts::*`
 --> cycle.rs:2:5
  |
2 | use creusot_contracts::*;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: encountered a cycle during translation: [{Item(DefId(0:5 ~ cycle[4e30]::f))}, {Item(DefId(0:6 ~ cycle[4e30]::g))}, {Item(DefId(0:5 ~ cycle[4e30]::f))}]
 --> cycle.rs:4:1
  |
4 | pub fn f() {
  | ^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

